@@ -169,6 +169,14 @@ convert_field (struct type *type, int field)
   if (PyObject_SetAttrString (result, "artificial", arg) < 0)
     goto failarg;
 
+  if (TYPE_CODE (type) == TYPE_CODE_CLASS)
+    arg = field < TYPE_N_BASECLASSES (type) ? Py_True : Py_False;
+  else
+    arg = Py_False;
+  Py_INCREF (arg);
+  if (PyObject_SetAttrString (result, "is_base_class", arg) < 0)
+    goto failarg;
+
   arg = PyLong_FromLong (TYPE_FIELD_BITSIZE (type, field));
   if (!arg)
     goto fail;
